--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,81 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-size: 100% 270px;
+  background-repeat: repeat-x;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 82px;
+  padding-top: 90px;
+}
+
+section > div {
+  margin: 0px 70px;
+}
+
+.block2 {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logbtn > img {
+  padding-right: 10px;
+}
+
+.block a {
+  color: white;
+  text-decoration: none;
+}
+
+.logbtn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #487aa5;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+article {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 15px 40px;
+}
+
+article h2 {
+  color: #1c5380;
+}
+
+.nav-bar ul {
+  display: flex;
+  justify-content: center;
+}
+
+.nav-bar a {
+  color: #1c5380;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.nav-bar-ul li {
+  padding: 0 15px;
+  margin: 0;
+  list-style-type: none;
+  text-align: center;
+}
+
+.badge-nav > a {
+  padding-left: 43px;
+}
+
+.last {
+  color: gray;
 }
