--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,62 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.s1{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+.a1{
+  display: flex;
+  width: 40%;
+  margin: 50px;
+  height: 700px;
+}
+
+.a2{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  height: 500px;
+  margin: 50px;
+  margin-right: 200px;
+  
+}
+
+.diva1{
+  display: flex;
+  justify-content: center;
+ 
+}
+
+
+
+.diva2{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+
+}
+
+.nav-footer{
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+}
+
+
