--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,70 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+main{
+  margin: 5%;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+section{
+  display: flex;
+}
+.phones{
+  width: 15em;
+  margin-left: 20%;
+  margin-right: 10%;
+}
+.logo{
+  width: 13em;
+  margin-top: 15px;
+}
+.camara{
+  margin-left: 10%;
+}
+button{
+  background-color:#3f729b;
+  color: white;
+  border-color:#3f729b ;
+  margin-left: 70px;
+  margin-bottom: 15px;
+  width: 7em;
+}
+.definition{
+  background-image: url(/Users/bea/Desktop/lab-css-instagram-clone/images/frame.png);
+  padding-left: 30px;
+  padding-top: 10px;
+}
+h1{
+  color:#06365f;
+  font-size: 20px;
+  text-align: justify;
+}
+p{
+font-size: 11px;
+}
+.descarga{
+  width: 8em;
+  margin-left: 30px;
+}
+.nav-bar a{
+  color: #3f729b;
+  text-decoration: none;
+  list-style-type: none;
+  text-transform: uppercase;
+  font-size: 9px;
+  font-weight: bolder;
+  
+}
+.nav-bar ul li{
+  
+  list-style-type: none;
+}
+.nav-bar-ul{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 14%;
+  margin-right: 46%;
+
 }
