--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,117 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  width: 100%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  background-size: 100% 45%;
+}
+
+.maincontent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 150px;
+}
+
+.iphone {
+margin-right: 30px;
+width: 400px;
+}
+
+.information {
+  width: 600px;
+  margin-left: 30px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.logo {
+  width: 400px;
+}
+
+.login {
+  display: flex;
+  width: 100px;
+  height: 45px;
+  color: white;
+  background: linear-gradient(rgba(106,143,171), rgba(28,83,128));
+  border: 0.5px solid rgba(28,83,128);
+  border-radius: 3px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home {
+  width: 25px;
+}
+
+h1 {
+  font-size: 30px;
+  color: #06365f;
+  margin-bottom: 20px;
+}
+
+p {
+  margin-bottom: 20px;
+  font: ;
+}
+
+.description {
+  padding: 30px 30px 0px 30px;
+  border-radius: 6px;
+  height: 400px;
+  background-image: url('../images/frame.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.storebuttons {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+  padding-bottom: 0px;
+}
+
+.appstoreapple {
+  width: 200px;
+  margin-right: 20px;
+}
+
+.appstoreandroid {
+  width: 185px;
+}
+
+ul {
+  margin: 60px 250px; 
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+  text-transform: uppercase;
+  list-style-type: none;
+  font-weight: bold;
+  color: #1c5380;
+  font-size: 15px;
+}
+
+.grey-menu {
+  color:rgba(160, 160, 160, 0.87)
 }
