--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,62 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("./../images/bgtile.png");
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.box{
+  background-image: url("./../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 800px;
+  margin-left: 400px;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content:flex-end;
+}
+
+#phone{
+  position: relative;
+  left: 300px;
+}
+
+.centerTxt{
+  color: black;
+}
+
+
+footer{
+  margin:auto 100px;
+  position: relative;
+  top:500px;
+  right: 700px;
+  }
+
+footer div nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: space-between;
+
+}
+
+footer div ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  
+}
+
+
+ul{
+  list-style-type: none;
 }
