--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ main {
   top: 0;
   left: 0;
   width: 100%;
-  height: 35%;
+  min-height: 275px;
   z-index: -1000;
 }
 
@@ -134,3 +134,18 @@ main {
   color: #1c5380 ;
 }
 
+@media only screen and (max-width: 700px) {
+  .article__img {
+    display: none;
+  }
+  .article {
+    padding-left: 2.25em;
+    padding-right: 2.25em;
+    margin-top: 1em;
+  }
+
+  .background {
+    min-height: 200px;
+  }
+
+}
