--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,100 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+#main {
+  padding-top: 150px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 75%;
+  margin: auto;
+}
+
+#left-side{
+  margin-left: 80px;
+  margin-right: 100px;
+}
+
+#right-side {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: auto;
+}
+
+.right-side-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.right-side-text {
+  background-image: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 20px;
+}
+
+h2 {
+  padding-bottom: 20px;
+  margin: auto;
+  color: #06365f;
+  text-align: left;
+  width: 85%;
+}
+
+.right-side-text p {
+  padding-bottom: 20px;
+  margin: auto;
+  color: black;
+  text-align: left;
+  width: 85%;
+}
+.button {
+  background-image: linear-gradient(#23679f, #1c5380);
+  border: 2px solid #1c5380;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 25px;
+  font-size: 20px;
+  cursor: pointer;
+}
+  
+.right-side-icons {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 30px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 20px;
+  list-style: none;
+  width: 45%;
+  margin: auto;
+}
+
+.nav li:hover, a:visited, a:link, a:active {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+  color: #06365f;
+}
+
