--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,98 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  min-height: 100vh;
 }
+img {
+  object-fit: contain;
+}
+
+#blue-bg {
+  background-image: linear-gradient(hsl(208deg 31% 47%),hsl(208deg 41% 37%));
+  height:35vh;
+}
+
+#landing {
+  margin: -200px auto 0 auto;
+  width: 70vw;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#landing > div {
+  width:60%;
+}
+
+#info {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+}
+
+#info div:first-child {
+  display: flex;
+  padding-bottom: 20px;
+  justify-content: space-between;
+  align-items: center;
+
+
+}
+
+#info div:last-child {
+  background-color:  white;
+  padding: 10px 30px;
+  border-radius: 10px;
+  
+
+}
+#info div:last-child h1 {
+  color: #06365f;
+  width:70%;
+}
+
+.login-btn {
+  height: 50px;
+  background-image: linear-gradient(hsl(208, 41%, 61%),hsl(208deg 41% 37%));
+  border: 3px solid hsl(208deg 41% 40%);
+  border-radius: 4px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  color: hsl(208, 41%, 90%);
+  font-weight: 800;
+}
+.login-btn img{
+  width:20px;
+  padding: 5px;
+}
+
+a img {
+  padding-right: 30px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+}
+ul {
+  display:flex;
+  list-style-type:none;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+ul * {
+  font-weight: 600;
+  padding: 10px 10px;
+}
+
+ul>li {
+  color: rgb(187, 186, 186);
+}
+
+ul>a {
+  color:hsl(208, 41%, 61%)
+}
+
