--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,12 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-attachment: fixed;
+  background-color: rgb(245, 241, 241);
 }
+#background {
+  background: #06365f;
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 35%;
