--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,79 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+
+
+html {
+  font-size: 16px;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg, #1c5380 40%, #ffffff 40%);
+}
+
+.home{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 50px 200px 50px;
+}
+
+.welcome {
+  margin-left: 50px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.header button {
+  color: white;
+  background: linear-gradient(180deg, #3c6485 10%, #1d4769 80%);  
+  font-size: 1rem;
+  width: 120px;
+  height: 40px;
+  padding: 0px;
+  border-radius: 5px;
+  border: 2px solid #165286;
+}
+
+.header button img {
+  height: 50%;
+  padding-right: 5px;
+}
+
+h1 {
+  color: #06365f;
+  padding: 50px 50px 0px;
+}
+
+.about {
+ background-image: url('../images/frame.png');
+ background-size: cover;
+}
+
+.about p {
+  padding: 0px 50px;
+}
+
+.download {
+  padding: 10px 50px;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+}
+
+ul li {
+  display: inline;
+  padding: 0px 10px;
+  
+}
+
+ul a {
+  text-decoration: none;
+  color: #1c5380;
 }
