--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
+:root{
+  --dark-blue: #06365f;
+  --light-blue: #1c5380;  
+}
+
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
